force-app/main/default/objects/Opportunity/fields/Accruing_Unpaid_Expense_Total__c.field-meta.xml
<CustomField>
    <fullName>Accruing_Unpaid_Expense_Total__c</fullName>
    <label>Accruing/Unpaid Expense Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>