force-app/main/default/objects/Opportunity/fields/Activacion_autorizada__c.field-meta.xml
<CustomField>
    <fullName>Activacion_autorizada__c</fullName>
    <label>Activación autorizada?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>