force-app/main/default/objects/Opportunity/fields/Campaign_Assign__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Assign__c</fullName>
    <formula>Campaign.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Assign</label>
    <type>Text</type>
</CustomField>