force-app/main/default/objects/Opportunity/fields/Check_Price_Products__c.field-meta.xml
<CustomField>
    <fullName>Check_Price_Products__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Price Products</label>
    <type>Checkbox</type>
</CustomField>