force-app/main/default/objects/Opportunity/fields/Check_Sell_Price__c.field-meta.xml
<CustomField>
    <fullName>Check_Sell_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Sell Price</label>
    <type>Checkbox</type>
</CustomField>