force-app/main/default/objects/Opportunity/fields/check_stage__c.field-meta.xml
<CustomField>
    <fullName>check_stage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>trampa stage</description>
    <label>check stage</label>
    <type>Checkbox</type>
</CustomField>