force-app/main/default/objects/Opportunity/fields/Ciente_Capacitado__c.field-meta.xml
<CustomField>
    <fullName>Ciente_Capacitado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ciente Capacitado</label>
    <type>Checkbox</type>
</CustomField>