force-app/main/default/objects/Opportunity/fields/Comentarios_Otros__c.field-meta.xml
<CustomField>
    <fullName>Comentarios_Otros__c</fullName>
    <label>Comentarios Otros</label>
    <type>TextArea</type>
</CustomField>