force-app/main/default/objects/Opportunity/fields/Cuenta_Recuperada__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_Recuperada__c</fullName>
    <formula>Account.Recuperado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cuenta Recuperada</label>
    <type>Checkbox</type>
</CustomField>