force-app/main/default/objects/Opportunity/fields/Data_Time_Cotizacion__c.field-meta.xml
<CustomField>
    <fullName>Data_Time_Cotizacion__c</fullName>
    <label>Data Time Cotización</label>
    <type>DateTime</type>
</CustomField>