force-app/main/default/objects/Opportunity/fields/Data_Time_Ejecucion__c.field-meta.xml
<CustomField>
    <fullName>Data_Time_Ejecucion__c</fullName>
    <label>Data Time Ejecución</label>
    <type>DateTime</type>
</CustomField>