force-app/main/default/objects/Opportunity/fields/Data_Time_Entendimiento__c.field-meta.xml
<CustomField>
    <fullName>Data_Time_Entendimiento__c</fullName>
    <label>Data Time Entendimiento</label>
    <type>DateTime</type>
</CustomField>