force-app/main/default/objects/Opportunity/fields/Data_Time_Ganada__c.field-meta.xml
<CustomField>
    <fullName>Data_Time_Ganada__c</fullName>
    <label>Data Time Ganada</label>
    <type>DateTime</type>
</CustomField>