force-app/main/default/objects/Opportunity/fields/Data_Time_Negociacion__c.field-meta.xml
<CustomField>
    <fullName>Data_Time_Negociacion__c</fullName>
    <label>Data Time Negociación</label>
    <type>DateTime</type>
</CustomField>