force-app/main/default/objects/Opportunity/fields/Estado_Cotizacion__c.field-meta.xml
<CustomField>
    <fullName>Estado_Cotizacion__c</fullName>
    <formula>IF((SLA_Cotizacion__c != null)||(SLA_Cotizacion__c != &apos;&apos;), &quot;Paso a la siguiente etapa Negociación fecha &quot; &amp; TEXT(DATEVALUE( Data_Time_Negociacion__c )) &amp; &quot; &quot; &amp; TEXT(TIMEVALUE(Data_Time_Negociacion__c - (6/24))) , 
   IF(FLOOR((NOW() - Data_Time_Cotizacion__c) * 24 * 60) &lt; 10, IMAGE(&apos;/resource/relojVerde&apos;, &apos;relojVerde&apos;, 50, 50)  &amp; &quot; Tiempo trascurrido en la etapa &quot; &amp; TEXT(FLOOR(NOW() - Data_Time_Cotizacion__c)) &amp; &quot; Días &quot; &amp; TEXT( ROUND(((FLOOR((NOW() - Data_Time_Cotizacion__c) * 24 * 60)) - (FLOOR(NOW() - Data_Time_Cotizacion__c) * 1440)) / 60, 2)) &amp; &quot; Horas&quot;,
      IF(FLOOR((NOW() - Data_Time_Cotizacion__c) * 24 * 60) &lt; 30, IMAGE(&apos;/resource/relojNaranja&apos;, &apos;relojNaranja&apos;, 50, 50)  &amp; &quot; Tiempo trascurrido en la etapa &quot; &amp; TEXT(FLOOR(NOW() - Data_Time_Cotizacion__c)) &amp; &quot; Días &quot; &amp; TEXT( ROUND(((FLOOR((NOW() - Data_Time_Cotizacion__c) * 24 * 60)) - (FLOOR(NOW() - Data_Time_Cotizacion__c) * 1440)) / 60, 2)) &amp; &quot; Horas&quot;,
         IF(FLOOR((NOW() - Data_Time_Cotizacion__c) * 24 * 60) &gt; 30, IMAGE(&apos;/resource/relojRojo&apos;, &apos;relojRojo&apos;, 50, 50) &amp; &quot; Tiempo trascurrido en la etapa &quot; &amp; TEXT(FLOOR(NOW() - Data_Time_Cotizacion__c)) &amp; &quot; Días &quot; &amp; TEXT( ROUND(((FLOOR((NOW() - Data_Time_Cotizacion__c) * 24 * 60)) - (FLOOR(NOW() - Data_Time_Cotizacion__c) * 1440)) / 60, 2)) &amp; &quot; Horas&quot;, &quot;&quot;
         )
      )
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado Cotización</label>
    <type>Text</type>
</CustomField>