force-app/main/default/objects/Opportunity/fields/Estado_Entendimiento__c.field-meta.xml
<CustomField>
    <fullName>Estado_Entendimiento__c</fullName>
    <formula>IF((SLA_Entendimiento__c != null)||(SLA_Entendimiento__c != &apos;&apos;), &quot;Paso a la siguiente etapa Cotización fecha &quot; &amp; TEXT(DATEVALUE( Data_Time_Cotizacion__c )) &amp; &quot; &quot; &amp; TEXT(TIMEVALUE(Data_Time_Cotizacion__c - (6/24))) , 
   IF(FLOOR((NOW() - CreatedDate) * 24 * 60) &lt; 10, IMAGE(&apos;/resource/relojVerde&apos;, &apos;relojVerde&apos;, 50, 50)  &amp; &quot; Tiempo trascurrido en la etapa &quot; &amp; TEXT(FLOOR(NOW() - CreatedDate)) &amp; &quot; Días &quot; &amp; TEXT( ROUND(((FLOOR((NOW() - CreatedDate) * 24 * 60)) - (FLOOR(NOW() - CreatedDate) * 1440)) / 60, 2)) &amp; &quot; Horas&quot;,
      IF(FLOOR((NOW() - CreatedDate) * 24 * 60) &lt; 30, IMAGE(&apos;/resource/relojNaranja&apos;, &apos;relojNaranja&apos;, 50, 50)  &amp; &quot; Tiempo trascurrido en la etapa &quot; &amp; TEXT(FLOOR(NOW() - CreatedDate)) &amp; &quot; Días &quot; &amp; TEXT( ROUND(((FLOOR((NOW() - CreatedDate) * 24 * 60)) - (FLOOR(NOW() - CreatedDate) * 1440)) / 60, 2)) &amp; &quot; Horas&quot;,
         IMAGE(&apos;/resource/relojRojo&apos;, &apos;relojRojo&apos;, 50, 50) &amp; &quot; Tiempo trascurrido en la etapa &quot; &amp; TEXT(FLOOR(NOW() - CreatedDate)) &amp; &quot; Días &quot; &amp; TEXT( ROUND(((FLOOR((NOW() - CreatedDate) * 24 * 60)) - (FLOOR(NOW() - CreatedDate) * 1440)) / 60, 2)) &amp; &quot; Horas&quot;
      )
   )
)</formula>
    <label>Estado Entendimiento</label>
    <type>Text</type>
</CustomField>