force-app/main/default/objects/Opportunity/fields/Fecha_Estimada_Cierre__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Estimada_Cierre__c</fullName>
    <label>Fecha Estimada de Cierre</label>
    <type>Date</type>
</CustomField>