force-app/main/default/objects/Opportunity/fields/Final_Paid_Expense_Total__c.field-meta.xml
<CustomField>
    <fullName>Final_Paid_Expense_Total__c</fullName>
    <label>Final/Paid Expense Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>