force-app/main/default/objects/Opportunity/fields/Folio_Mkt2__c.field-meta.xml
<CustomField>
    <fullName>Folio_Mkt2__c</fullName>
    <label>Folio Mkt2</label>
    <length>25</length>
    <type>Text</type>
</CustomField>