force-app/main/default/objects/Opportunity/fields/Folio_Mkt__c.field-meta.xml
<CustomField>
    <fullName>Folio_Mkt__c</fullName>
    <formula>Account.Folio_Mkt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Folio Mkt</label>
    <type>Text</type>
</CustomField>