force-app/main/default/objects/Opportunity/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SP-FN-FLETE NACIONAL</fullName>
            </value>
            <value>
                <fullName>SP-FI-FLETE INTER</fullName>
            </value>
            <value>
                <fullName>SP-A-AEREO</fullName>
            </value>
            <value>
                <fullName>SP-AW-GLOBAL AEREO</fullName>
            </value>
            <value>
                <fullName>SP-CE-COMERCIO EXT</fullName>
            </value>
            <value>
                <fullName>SP-EX-SEGUROS</fullName>
            </value>
            <value>
                <fullName>SP-M-MARITIMO</fullName>
            </value>
            <value>
                <fullName>SP-PQ-PAQUETERIA</fullName>
            </value>
            <value>
                <fullName>SP-PTO-PUERTOS</fullName>
            </value>
            <value>
                <fullName>SP-R-GLOBAL ROUTING</fullName>
            </value>
            <value>
                <fullName>SP-SL-SERV LOGISTICO</fullName>
            </value>
            <value>
                <fullName>SP-T-CONSOLIDADO</fullName>
            </value>
            <value>
                <fullName>SP-W-GLOBAL MARITIMO</fullName>
            </value>
            <value>
                <fullName>SP-WH-ALMACENAJE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>