force-app/main/default/objects/Opportunity/fields/Guias__c.field-meta.xml
<CustomField>
    <fullName>Guias__c</fullName>
    <description>Define el numero de guias</description>
    <label>Guias</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>