force-app/main/default/objects/Opportunity/fields/IEQ_Status__c.field-meta.xml
<CustomField>
    <fullName>IEQ_Status__c</fullName>
    <formula>TEXT(Import_Export_Quote_Order__r.Quotation_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IEQ Status</label>
    <type>Text</type>
</CustomField>