force-app/main/default/objects/Opportunity/fields/Import_Export_Quote_Order__c.field-meta.xml
<CustomField>
    <fullName>Import_Export_Quote_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Import-Export Quote/Order</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Customer_Quote__c.Account_for__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Customer_Quote__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>