force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>No Budget / Lost Funding</fullName>
            </value>
            <value>
                <fullName>No Decision / Non-Responsive</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Ruta fuera de portafolio</fullName>
            </value>
            <value>
                <fullName>No rentable</fullName>
            </value>
            <value>
                <fullName>Tiempo de plan de trabajo</fullName>
            </value>
            <value>
                <fullName>Vetado, moroso (Temas Adm)</fullName>
            </value>
            <value>
                <fullName>No aplica proyecto</fullName>
            </value>
            <value>
                <fullName>No contesto al contactarlo nuevamente</fullName>
            </value>
            <value>
                <fullName>Esta realizando benchmark/investigacion</fullName>
            </value>
            <value>
                <fullName>Para oportunidad futura</fullName>
            </value>
            <value>
                <fullName>Declinado por el folio</fullName>
            </value>
            <value>
                <fullName>Falta de seguimiento a oportunidad</fullName>
            </value>
            <value>
                <fullName>Falta de crédito</fullName>
            </value>
            <value>
                <fullName>Falta de disponibilidad</fullName>
            </value>
            <value>
                <fullName>Tarifa Alta</fullName>
            </value>
            <value>
                <fullName>Tardanza en Cotizar</fullName>
            </value>
            <value>
                <fullName>Cancelación de Cliente</fullName>
            </value>
            <value>
                <fullName>Falla Operativa</fullName>
            </value>
            <value>
                <fullName>Fuera de word to place</fullName>
            </value>
            <value>
                <fullName>Oportunidad duplicada</fullName>
            </value>
            <value>
                <fullName>No le interesa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>