force-app/main/default/objects/Opportunity/fields/Mes_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Mes_Close_Date__c</fullName>
    <formula>MONTH(CloseDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mes Close Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>