force-app/main/default/objects/Opportunity/fields/Mkt_Executive__c.field-meta.xml
<CustomField>
    <fullName>Mkt_Executive__c</fullName>
    <label>Mkt Executive</label>
    <length>20</length>
    <type>Text</type>
</CustomField>