force-app/main/default/objects/Opportunity/fields/Modalidad__c.field-meta.xml
<CustomField>
    <fullName>Modalidad__c</fullName>
    <description>Describe el tipo de Modalidad</description>
    <label>Modalidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prepago</fullName>
            </value>
            <value>
                <fullName>Consumo</fullName>
            </value>
            <value>
                <fullName>Recompra</fullName>
            </value>
            <value>
                <fullName>Tarimas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>