force-app/main/default/objects/Opportunity/fields/Negotiation_Review_Description__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Review_Description__c</fullName>
    <label>Negotiation/Review Description</label>
    <type>TextArea</type>
</CustomField>