force-app/main/default/objects/Opportunity/fields/Numero_de_guias__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_guias__c</fullName>
    <label>Número de guías</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>&lt;10</fullName>
            </value>
            <value>
                <fullName>&lt;100</fullName>
            </value>
            <value>
                <fullName>&gt;100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>