force-app/main/default/objects/Opportunity/fields/Opportunity_Record_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record_Number__c</fullName>
    <label>Opportunity Record Number</label>
    <type>AutoNumber</type>
</CustomField>