force-app/main/default/objects/Opportunity/fields/P2G_Opp_DebitNote__c.field-meta.xml
<CustomField>
    <fullName>P2G_Opp_DebitNote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para relacionar la Oportunidad con la Debit Note que tenga el folio relacionado a la Opp</description>
    <label>Debit Note</label>
    <referenceTo>Debit_Note__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>