force-app/main/default/objects/Opportunity/fields/Peso__c.field-meta.xml
<CustomField>
    <fullName>Peso__c</fullName>
    <label>Peso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sobre</fullName>
            </value>
            <value>
                <fullName>1-5 Kg</fullName>
            </value>
            <value>
                <fullName>6-10 Kg</fullName>
            </value>
            <value>
                <fullName>11-15 Kg</fullName>
            </value>
            <value>
                <fullName>16-20 Kg</fullName>
            </value>
            <value>
                <fullName>Mas de 20 Kg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>