force-app/main/default/objects/Opportunity/fields/Por_cual_proveedor_cambio_el_cliente__c.field-meta.xml
<CustomField>
    <fullName>Por_cual_proveedor_cambio_el_cliente__c</fullName>
    <description>Se proporciona el nombre del proveedor que escoge el cliente cuando la cotización se cancela por el Nivel de servicio</description>
    <label>¿Por cuál proveedor cambió el cliente?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>