force-app/main/default/objects/Opportunity/fields/Price_Book_del__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities_del</relationshipName>
    <type>Lookup</type>
</CustomField>