force-app/main/default/objects/Opportunity/fields/PROJ_Buy_price__c.field-meta.xml
<CustomField>
    <fullName>PROJ_Buy_price__c</fullName>
    <label>Total Buy Price</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>