force-app/main/default/objects/Opportunity/fields/PROJ_Margen_de_ventas__c.field-meta.xml
<CustomField>
    <fullName>PROJ_Margen_de_ventas__c</fullName>
    <formula>((PROJ_TotalQuotes__c - Total_Buy_Price2__c)/ PROJ_TotalQuotes__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margen de ventas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>