force-app/main/default/objects/Opportunity/fields/PROJ_Service_Mode__c.field-meta.xml
<CustomField>
    <fullName>PROJ_Service_Mode__c</fullName>
    <label>Service Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pq</fullName>
                <label>Paqueteria</label>
            </value>
            <value>
                <fullName>FN</fullName>
                <label>TNA</label>
            </value>
            <value>
                <fullName>FI</fullName>
                <label>TIN</label>
            </value>
            <value>
                <fullName>PTO</fullName>
                <label>Puerto</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Maritimo</label>
            </value>
            <value>
                <fullName>T</fullName>
                <label>Tarima</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>Aereo</label>
            </value>
            <value>
                <fullName>CE</fullName>
                <label>Comercio Exterior</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Routing Order</label>
            </value>
            <value>
                <fullName>WH</fullName>
                <label>Warehouse</label>
            </value>
            <value>
                <fullName>International</fullName>
                <isActive>false</isActive>
                <label>International</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>