force-app/main/default/objects/Opportunity/fields/PROJ_TotalQuotes__c.field-meta.xml
<CustomField>
    <fullName>PROJ_TotalQuotes__c</fullName>
    <label>Total Quotes</label>
    <summarizedField>Quote.TotalPrice</summarizedField>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>