force-app/main/default/objects/Opportunity/fields/Proveedor__c.field-meta.xml
<CustomField>
    <fullName>Proveedor__c</fullName>
    <label>Proveedor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paquete Express</fullName>
            </value>
            <value>
                <fullName>AM PM</fullName>
            </value>
            <value>
                <fullName>DHL</fullName>
            </value>
            <value>
                <fullName>Estafeta</fullName>
            </value>
            <value>
                <fullName>Red Pack</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>