force-app/main/default/objects/Opportunity/fields/Quote_status__c.field-meta.xml
<CustomField>
    <fullName>Quote_status__c</fullName>
    <formula>TEXT(SyncedQuote.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote status</label>
    <type>Text</type>
</CustomField>