force-app/main/default/objects/Opportunity/fields/Realizacion_de_Kickoff__c.field-meta.xml
<CustomField>
    <fullName>Realizacion_de_Kickoff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Realización de Kickoff</label>
    <type>Checkbox</type>
</CustomField>