force-app/main/default/objects/Opportunity/fields/Requerimientos_especiales__c.field-meta.xml
<CustomField>
    <fullName>Requerimientos_especiales__c</fullName>
    <label>Requerimientos especiales</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Estibable</fullName>
            </value>
            <value>
                <fullName>Ctpat.</fullName>
            </value>
            <value>
                <fullName>Granel</fullName>
            </value>
            <value>
                <fullName>entarimado</fullName>
            </value>
            <value>
                <fullName>SUA (IMSS)</fullName>
            </value>
            <value>
                <fullName>R-control</fullName>
            </value>
            <value>
                <fullName>Alarma de reversa.</fullName>
            </value>
            <value>
                <fullName>Extintor</fullName>
            </value>
            <value>
                <fullName>EPP (Botas, chalecos, cascos, guantes lentes, mascarilla, COVID)</fullName>
            </value>
            <value>
                <fullName>Personal con restricción de edad</fullName>
            </value>
            <value>
                <fullName>GPS en tracto y Caja</fullName>
            </value>
            <value>
                <fullName>Riel logístico</fullName>
            </value>
            <value>
                <fullName>Gafas</fullName>
            </value>
            <value>
                <fullName>Certificado</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>