force-app/main/default/objects/Opportunity/fields/Revisado_por_IC__c.field-meta.xml
<CustomField>
    <fullName>Revisado_por_IC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revisado por IC</label>
    <type>Checkbox</type>
</CustomField>