force-app/main/default/objects/Opportunity/fields/Ruta_Folio__c.field-meta.xml
<CustomField>
    <fullName>Ruta_Folio__c</fullName>
    <formula>Import_Export_Quote_Order__r.Traffic__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ruta</label>
    <type>Text</type>
</CustomField>