force-app/main/default/objects/Opportunity/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FN</fullName>
                <default>true</default>
                <label>FN - Flete Nacional</label>
            </value>
            <value>
                <fullName>FI</fullName>
                <label>FI - Flete Internacional</label>
            </value>
            <value>
                <fullName>PQ</fullName>
                <label>PQ - Paqueterias</label>
            </value>
            <value>
                <fullName>T</fullName>
                <label>T - Tarimas</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>M - Maritimo</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>A - Aereo</label>
            </value>
            <value>
                <fullName>WH</fullName>
                <label>WH - Almacenajes</label>
            </value>
            <value>
                <fullName>Aduanas</fullName>
                <label>CE - Aduanas</label>
            </value>
            <value>
                <fullName>Seguros</fullName>
            </value>
            <value>
                <fullName>PTO - Puerto</fullName>
            </value>
            <value>
                <fullName>R - Global Routing</fullName>
            </value>
            <value>
                <fullName>PQI - Paquertería Internacional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>