force-app/main/default/objects/Opportunity/fields/SLA_Cotizacion__c.field-meta.xml
<CustomField>
    <fullName>SLA_Cotizacion__c</fullName>
    <label>SLA Cotización</label>
    <length>200</length>
    <type>Text</type>
</CustomField>