force-app/main/default/objects/Opportunity/fields/SLA_Ejecucion__c.field-meta.xml
<CustomField>
    <fullName>SLA_Ejecucion__c</fullName>
    <label>SLA Ejecución</label>
    <length>200</length>
    <type>Text</type>
</CustomField>