force-app/main/default/objects/Opportunity/fields/SLA_Entendimiento__c.field-meta.xml
<CustomField>
    <fullName>SLA_Entendimiento__c</fullName>
    <label>SLA Entendimiento</label>
    <length>200</length>
    <type>Text</type>
</CustomField>