force-app/main/default/objects/Opportunity/fields/SLA_Negociacion__c.field-meta.xml
<CustomField>
    <fullName>SLA_Negociacion__c</fullName>
    <label>SLA Negociación</label>
    <length>200</length>
    <type>Text</type>
</CustomField>