force-app/main/default/objects/Opportunity/fields/Stage_actual__c.field-meta.xml
<CustomField>
    <fullName>Stage_actual__c</fullName>
    <formula>TEXT(StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage actual</label>
    <type>Text</type>
</CustomField>