force-app/main/default/objects/Opportunity/fields/Tienda_online__c.field-meta.xml
<CustomField>
    <fullName>Tienda_online__c</fullName>
    <label>Tienda online</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>