force-app/main/default/objects/Opportunity/fields/Tiene_alguna_otra_plataforma_de_envios__c.field-meta.xml
<CustomField>
    <fullName>Tiene_alguna_otra_plataforma_de_envios__c</fullName>
    <label>Tiene alguna otra plataforma de envíos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>