force-app/main/default/objects/Opportunity/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Import-Export Quote/Order</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>