force-app/main/default/objects/Opportunity/fields/Tipo_de_industria__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_industria__c</fullName>
    <label>Tipo de industria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Joyería</fullName>
            </value>
            <value>
                <fullName>Documentos</fullName>
            </value>
            <value>
                <fullName>Zapatos</fullName>
            </value>
            <value>
                <fullName>Ropa</fullName>
            </value>
            <value>
                <fullName>Equipo medico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>