force-app/main/default/objects/Opportunity/fields/Tipo_de_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Oportunidad__c</fullName>
    <description>Describe el tipo de Oportunidad</description>
    <label>Tipo de Oportunidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acquisition</fullName>
            </value>
            <value>
                <fullName>Up-selling</fullName>
            </value>
            <value>
                <fullName>Cross selling</fullName>
            </value>
            <value>
                <fullName>One off / Seasonal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>